add description to asdf templates

--- a/weldx/asdf/templates/asdf_dataclass.py.jinja
+++ b/weldx/asdf/templates/asdf_dataclass.py.jinja
@@ -6,7 +6,7 @@ from weldx.asdf.types import WeldxType
 class {{class_name}}:
     """<CLASS DOCSTRING>"""
     {% for prop, dtype in zip(properties,property_types) -%}
-        {{ prop }}: {{ dtype.__name__ }}
+        {{ prop }}: {{ dtype}}
     {% endfor %}
 
 class {{class_name}}Type(WeldxType):
