--- a/weldx/asdf/templates/asdf_dataclass.py.jinja
+++ b/weldx/asdf/templates/asdf_dataclass.py.jinja
@@ -1,5 +1,6 @@
 from dataclasses import dataclass
 from typing import List
+from asdf import yamlutil
 from weldx.asdf.types import WeldxType
 
 
@@ -21,7 +22,11 @@ class {{class_name}}Type(WeldxType):
 
     @classmethod
     def to_tree(cls, node, ctx):
-        tree = node.__dict__
+        tree = dict(
+            {% for prop in properties -%}
+            {{ prop }}=yamlutil.custom_tree_to_tagged_tree(node.{{ prop }}, ctx),
+            {% endfor -%}
+            )
         return tree
 
     @classmethod
