--- a/weldx/asdf/templates/asdf_dataclass.py.jinja
+++ b/weldx/asdf/templates/asdf_dataclass.py.jinja
@@ -1,5 +1,5 @@
 from dataclasses import dataclass
-from typing import List
+from typing import List # noqa: F401
 from asdf import yamlutil
 from weldx.asdf.types import WeldxType
 
