add __all__ to py template

--- a/weldx/asdf/templates/asdf_dataclass.py.jinja
+++ b/weldx/asdf/templates/asdf_dataclass.py.jinja
@@ -7,6 +7,8 @@ from weldx.asdf.types import WeldxType
 import {{ lib }}
 {% endfor -%}
 
+__all__ = ["{{class_name}}","{{class_name}}Type"]
+
 
 @dataclass
 class {{class_name}}:
