update utils.py to resolve known asdf schema references (like pint.Quantity) correctly

--- a/weldx/asdf/templates/asdf_dataclass.yaml.jinja
+++ b/weldx/asdf/templates/asdf_dataclass.yaml.jinja
@@ -17,9 +17,9 @@ properties:
 {%- if  str.startswith(dtype,"List[") %}
     type: array
     items:
-      type: {{ _asdf_dtype(dtype) }}
+      {{ _asdf_dtype(dtype) }}
 {%- else %}
-    type: {{ _asdf_dtype(dtype) }}
+    {{ _asdf_dtype(dtype) }}
 {%- endif %}
 {% endfor %}
 
