add dict_to_tagged_tree helper function and update jinja template

--- a/weldx/asdf/templates/asdf_dataclass.py.jinja
+++ b/weldx/asdf/templates/asdf_dataclass.py.jinja
@@ -2,6 +2,7 @@ from dataclasses import dataclass
 from typing import List # noqa: F401
 from asdf.yamlutil import custom_tree_to_tagged_tree
 from weldx.asdf.types import WeldxType
+from weldx.asdf.utils import dict_to_tagged_tree
 
 {% for lib in lib_imports -%}
 import {{ lib }}
@@ -28,15 +29,8 @@ class {{class_name}}Type(WeldxType):
 
     @classmethod
     def to_tree(cls, node, ctx):
-        # convert to tagged tree
-        tree_full = dict(
-            {% for prop in properties -%}
-            {{ prop }}=custom_tree_to_tagged_tree(node.{{ prop }}, ctx),
-            {% endfor -%}
-            )
-
-        # drop None values
-        tree = {k:v for (k,v) in tree_full.items() if v is not None}
+        """convert to tagged tree and remove all None entries from node dictionary"""
+        tree = dict_to_tagged_tree(node, ctx)
         return tree
 
     @classmethod
