--- a/weldx/asdf/templates/asdf_dataclass.py.jinja
+++ b/weldx/asdf/templates/asdf_dataclass.py.jinja
@@ -1,8 +1,6 @@
 from dataclasses import dataclass
 from typing import List # noqa: F401
 
-from asdf.yamlutil import custom_tree_to_tagged_tree # noqa: F401
-
 from weldx.asdf.types import WeldxType
 from weldx.asdf.utils import dict_to_tagged_tree
 
@@ -32,7 +30,7 @@ class {{class_name}}Type(WeldxType):
     @classmethod
     def to_tree(cls, node: {{ class_name }}, ctx):
         """convert to tagged tree and remove all None entries from node dictionary"""
-        tree = dict_to_tagged_tree(node, ctx)
+        tree = dict_to_tagged_tree(node)
         return tree
 
     @classmethod
